# invariant

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  executor.md  expressions.md  fonts.md  icons.md  serialization.md  subgraphs.md
examples/: README.md  commutative_canonicalization.py  polynomial_distributive.py
src/invariant/: __init__.py  cacheable.py  executor.py  expressions.py  graph.py  graph_serialization.py  hashing.py  node.py  params.py  protocol.py  registry.py  types.py
src/invariant/ops/: __init__.py  poly.py  stdlib.py
src/invariant/store/: __init__.py  base.py  chain.py  codec.py  disk.py  memory.py  null.py
tests/: __init__.py  conftest.py  test_cacheable.py  test_codec.py  test_e2e_commutative.py  test_e2e_context.py  test_e2e_make_dict_list.py  test_e2e_polynomial.py  test_examples.py  test_executor.py  test_executor_subgraph.py  test_expressions.py  test_graph.py  test_graph_serialization.py  test_hashing.py  test_node.py  test_ops_stdlib.py  test_protocol.py  test_registry.py  test_store_chain.py  test_store_disk.py  test_store_memory.py  test_store_null.py  test_subgraph_node.py  test_types.py
